--- a/css/main.css
+++ b/css/main.css
@@ -2224,6 +2224,7 @@ html.no-csstransitions .home-content__main {
     position: relative;
     text-align: left;
     margin-top: 3.6rem;
+    margin-botton: 1.0em;
 }
 
 .timeline::before {
