--- a/css/main.css
+++ b/css/main.css
@@ -2360,6 +2360,31 @@ html.no-csstransitions .home-content__main {
     position: relative;
 }
 
+/* -------------------------------------------------------------------
+ * ## portfolio - (_site-layout,scss)
+ *
+ * ------------------------------------------------------------------- */
+
+.portfolio {
+    margin-top: 4.8rem;
+    max-width: none;
+    width: 1600px;
+}
+
+.item-porfolio {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-section {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    height: auto;
+}
+
 
 /* ------------------------------------------------------------------- 
  * ## bricks/masonry - (_site-layout.scss)
@@ -3010,10 +3035,11 @@ html.no-csstransitions .home-content__main {
  * ------------------------------------------------------------------- */
 
 .s-contact {
-    background-color: #151515;
+    background-color: #111111;
     background-image: url("../images/contact-bg.jpg");
     background-repeat: no-repeat;
     background-position: center, center;
+    background-size: contain;
     padding-top: 13.2rem;
     padding-bottom: 12rem;
     color: rgba(255, 255, 255, 0.5);
